--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<java.version>1.8</java.version>
 		<bootstrap.version>4.3.1</bootstrap.version>
 		<jquery.version>3.4.1</jquery.version>
-		<!-- <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version> -->
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 
 	<dependencies>
