--- a/pom.xml
+++ b/pom.xml
@@ -89,18 +89,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
 		<dependency>
-		 	<groupId>cz.kibo.api</groupId>
-  			<artifactId>astrologyAPI</artifactId>
-  			<version>1.2.1</version>
-  		</dependency>
-		
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20190722</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
