--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -1,1 +1,2 @@
-ephemeris.path=C:\\Users\\pc\\Documents\\workspace-spring-tool-suite-4-4.1.1.RELEASE\\ephemeris
+#ephemeris.path=C:\\Users\\pc\\Documents\\workspace-spring-tool-suite-4-4.1.1.RELEASE\\ephemeris
+ephemeris.path=D:\\jme\\ephemeris
