--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 welcome.message=Tarot y Astrolog&iacute;a
 spring.thymeleaf.cache=false
 # Sql server connection
-spring.datasource.url=jdbc:sqlserver://52.33.111.0;databaseName=springbootdb
-spring.datasource.username=sa
-spring.datasource.password=zPuga!123
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto = none
+
+#spring.datasource.url=jdbc:sqlserver://52.33.111.0;databaseName=springbootdb
+#spring.datasource.username=sa
+#spring.datasource.password=zPuga!123
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+#spring.jpa.hibernate.ddl-auto = none
 
 
 #select * 
