actualizar a la última versión

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,20 @@ spring.thymeleaf.cache=false
 #select * 
 #from h_Planetas
 #where PlanetaID=@planeta
+
+spring.datasource.url=jdbc:sqlserver://52.33.111.0:1433;user Id=sa;databaseName=za;Password=zPuga!123;Trusted_Connection=False
+spring.datasource.username=sa
+spring.datasource.password=zPuga!123
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto = none
+spring.datasource.configuration.maximum-pool-size=4
+spring.datasource.configuration.hibernate.id.new_generator_mappings=false
+spring.datasource.configuration.hibernate.format_sql=true
+
+spring.jpa.database=default
+spring.jpa.hibernate.show_sql=true
+spring.jpa.hibernate.order_updates=true
+spring.jpa.hibernate.order_inserts=true
+
